--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Networking</title>
-    <link rel="stylesheet" href="/index.6c52aca7.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <header>
@@ -20,7 +20,7 @@
             <a href="https://www.instagram.com/arya.bugs/" target="_blank">Instagram</a>
           </li>
           <li>
-            <a href="https://github.com/maryam-innovates/ppp" target="_blank">GitHub</a>
+            <a href="https://github.com/maryam-innovates/Profiles" target="_blank">GitHub</a>
           </li>
         </ul>
       </nav>
@@ -252,7 +252,7 @@
         </form>
       </section>
     </main>
-    <script type="module" src="/index.16982418.js" defer></script>
+    <script type="module" src="index.js" defer></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js" defer></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js" defer></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-analytics.js" defer></script>
