--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
       <section id="hero">
         <h1>Welcome to the Networking Boot</h1>
-        <p>This is a networking boot for CSS major students from all over the world to come, share their goals, wishes, and connect with others.</p>
+        <p>This is a networking boot for CSS major students worldwide to come, share their goals, and wishes, and connect with others.</p>
       </section>
       <section id="profiles">
         <h2>Profiles</h2>
@@ -50,7 +50,7 @@
             <button id="heart" class="heart-icon">&#10084;</button>
             <span id="like-count">0</span>
           </div>
-          <label for="flag">Choose a Flag</label>
+          <label for="flag">Your Country</label>
           <select id="flag" required>
             <option value="https://flagcdn.com/w320/af.png">🇨🇮 Afghanistan</option>
             <option value="https://flagcdn.com/w320/al.png">🇨🇮 Albania</option>
